compiling_error.txt
/home/carlos/Desktop/backup/ProgramasC++/Grupo5_Lab5/Relative.cpp:5:1: error: ‘Relative’ does not name a type
 Relative::Relative(string nombre,string telef, string correo, string tipo) : Contact(nombre,telef,correo){
 ^~~~~~~~
/home/carlos/Desktop/backup/ProgramasC++/Grupo5_Lab5/Relative.cpp:9:1: error: ‘Relative’ does not name a type
 Relative::~Relative(){
 ^~~~~~~~
/home/carlos/Desktop/backup/ProgramasC++/Grupo5_Lab5/Relative.cpp:13:6: error: ‘Classmate’ has not been declared
 void Classmate::setType(string tipo){
      ^~~~~~~~~
/home/carlos/Desktop/backup/ProgramasC++/Grupo5_Lab5/Relative.cpp: In function ‘void setType(std::__cxx11::string)’:
/home/carlos/Desktop/backup/ProgramasC++/Grupo5_Lab5/Relative.cpp:14:5: error: invalid use of ‘this’ in non-member function
     this->type = tipo;
     ^~~~
/home/carlos/Desktop/backup/ProgramasC++/Grupo5_Lab5/Relative.cpp: At global scope:
/home/carlos/Desktop/backup/ProgramasC++/Grupo5_Lab5/Relative.cpp:17:8: error: ‘Classmate’ has not been declared
 string Classmate::getType(){
        ^~~~~~~~~
/home/carlos/Desktop/backup/ProgramasC++/Grupo5_Lab5/Relative.cpp: In function ‘std::__cxx11::string getType()’:
/home/carlos/Desktop/backup/ProgramasC++/Grupo5_Lab5/Relative.cpp:18:12: error: ‘classmet’ was not declared in this scope
     return classmet;
            ^~~~~~~~
